[gd_scene load_steps=5 format=3 uid="uid://bkwpqvfhlfxiq"]

[ext_resource type="Script" path="res://Autoload/SoundManager.gd" id="1_q8v6o"]
[ext_resource type="AudioStream" uid="uid://xbas7k5myvy2" path="res://Assets/HitSound.wav" id="2_m5mrh"]
[ext_resource type="AudioStream" uid="uid://byhjme3si2bsp" path="res://Assets/ComboBreak.wav" id="3_hsm8w"]
[ext_resource type="AudioStream" uid="uid://bfmayigpog64n" path="res://Assets/FailSound.ogg" id="4_l7261"]

[node name="SoundManager" type="Node2D"]
script = ExtResource("1_q8v6o")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_m5mrh")
volume_db = -10.0

[node name="ComboBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hsm8w")
volume_db = -10.0

[node name="FailSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_l7261")
volume_db = -5.0

[node name="Audio" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[connection signal="finished" from="Audio" to="." method="_on_audio_finished"]
